--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,14 +1,18 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
 
 
-body{
+body {
     background-color: black;
     color: white;
     margin: 0 auto;
     max-width: 1800px;
 }
 
-#root{
+#root {
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -44,7 +48,7 @@ body{
     align-items: flex-start;
     justify-content: flex-start;
     gap: 20px;
-    padding:  .3rem 1rem;
+    padding: .3rem 1rem;
     border-bottom: 1px solid #2F3336;
 }
 
@@ -89,10 +93,12 @@ body{
     /*padding: 0.8rem 0;*/
     gap: 1rem;
 }
+
 .tweet-editor-actions button {
     background-color: transparent;
     border: none;
 }
+
 .button {
     text-transform: capitalize;
     padding: .7rem 1.5rem;
@@ -102,7 +108,8 @@ body{
     color: white;
     font-size: 1rem;
 }
-.tweet{
+
+.tweet {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
@@ -117,12 +124,13 @@ body{
     flex: 0 0 70px;
 }
 
-.tweet-avatar img{
+.tweet-avatar img {
     max-width: 100%;
     max-height: 100px;
     border-radius: 100%;
 }
-.tweet-content{
+
+.tweet-content {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -130,12 +138,14 @@ body{
     gap: 30px;
     width: 100%;
 }
-.tweet-body{
+
+.tweet-body {
     display: flex;
     flex-direction: column;
     gap: .5rem;
 }
-.tweet-title{
+
+.tweet-title {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
@@ -143,27 +153,30 @@ body{
     font-size: 1rem;
 }
 
-.tweet-title svg{
+.tweet-title svg {
     width: 1.2rem;
     height: auto;
 }
-.tweet-title-author{
+
+.tweet-title-author {
     font-size: 1rem;
 }
-.tweet-title-details{
+
+.tweet-title-details {
     color: #6E767D;
 }
-.tweet-text{
+
+.tweet-text {
     color: #D9D9D9;
     font-size: 1rem;
 }
 
-.tweet-image{
+.tweet-image {
     width: 100%;
-    padding:  .3rem 0 0 0;
+    padding: .3rem 0 0 0;
 }
 
-.tweet-image img{
+.tweet-image img {
     max-width: 100%;
     height: auto;
     border-radius: 50px;
@@ -187,39 +200,48 @@ body{
     color: #2F3336;
 }
 
-.tweet-action{
+.tweet-action {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 20px;
 }
-App{
+
+App {
     display: flex;
 }
-h2,p,a{
+
+h2,
+p,
+a {
     font-family: 'Inter', sans-serif;
 }
-.sidebarOption{
+
+.sidebarOption {
     display: flex;
     align-items: center;
     cursor: pointer;
     padding: 10px;
 }
-.sidebarOption>h2{
+
+.sidebarOption>h2 {
     font-weight: 400;
     font-size: 20px;
     margin-right: 20px;
 }
-.sidebarOption img{
+
+.sidebarOption img {
     padding: 0 18px;
 }
-.sidebarOption:hover{
+
+.sidebarOption:hover {
     background-color: #8f96a33c;
     border-radius: 30px;
     color: #e8f5fe;
     transition: color 100ms ease-out;
 }
-.sidebar__tweet{
+
+.sidebar__tweet {
     text-transform: capitalize;
     padding: .7rem 1.5rem;
     border: none;
@@ -231,47 +253,55 @@ h2,p,a{
     padding: 10px 70px;
 
 }
-.sidebar__icon__twitter{
+
+.sidebar__icon__twitter {
     margin-left: 30px;
     margin-top: 20px;
 }
-.trends__input{
+
+.trends__input {
     display: flex;
     align-items: center;
     padding: 10px;
-   
+
     margin-top: 10px;
     margin-left: 20px;
 }
-.trends__input>input{
+
+.trends__input>input {
     border-radius: 20px;
     padding: 10px 70px;
     border: none;
     background-color: #e8f5fe;
 }
-.trends__searchIcon{
+
+.trends__searchIcon {
     color: #dee3ed;
     margin-left: 60px;
     position: relative;
 }
-.trends__container{
+
+.trends__container {
     margin-top: 15px;
     margin-left: 20px;
     padding: 20px;
     background-color: #808080;
     border-radius: 20px;
 }
-.trends__container>h2{
+
+.trends__container>h2 {
     font-size: 18px;
     font-weight: 800;
 }
-.tweet-action:hover{
-  color: #1D9BF0;
-  border-radius: 80px;
-  cursor: pointer;
 
-}
-.trends__search{
+/* .tweet-action:hover {
+    color: #1D9BF0;
+    border-radius: 80px;
+    cursor: pointer;
+
+} */
+
+.trends__search {
     display: flex;
     gap: 10px;
     border-radius: 40px;
@@ -279,7 +309,8 @@ h2,p,a{
     background-color: #16181c;
     margin-top: 4px;
 }
-.trends__search input{
+
+.trends__search input {
     border: none;
     background-color: #16181c;
     outline: none;
@@ -290,50 +321,56 @@ h2,p,a{
 }
 
 .trends__card,
-.follow__card
-{
+.follow__card {
     background-color: #16181c;
     border-radius: 20px;
     padding: 15px;
     margin-top: 10px;
-  
+
 }
-.trends__title  img{
+
+.trends__title img {
     display: flex;
     justify-content: space-between;
 }
-.trends__text__small{
+
+.trends__text__small {
     font-size: 15px;
     color: #6E767D;
 }
+
 .trends__show__more a {
     color: #1D9BF0;
     text-decoration: none;
 }
+
 .follow__items button {
     padding: .4rem 1rem;
     border: none;
     border-radius: 50px;
     background-color: white;
 }
-.follow__items img{
+
+.follow__items img {
     width: 40px;
     height: 40px;
 }
 
-.follow__flex{
+.follow__flex {
     display: flex;
     margin-top: 5px;
     padding: 10px 0;
     gap: 10px;
 }
-.trends__flex{
+
+.trends__flex {
     display: flex;
     margin-top: 5px;
     padding: 10px 0;
     justify-content: space-between;
 }
-.policy a{
+
+.policy a {
     font-size: 14px;
     font-weight: normal;
     text-align: center;
@@ -342,13 +379,14 @@ h2,p,a{
     padding: 5px;
 }
 
-.profile__title{
+.profile__title {
     display: flex;
     gap: 20px;
     padding: .5rem 1rem;
     border-bottom: 1px solid #2F3336;
 }
-.arraw__back{
+
+.arraw__back {
     display: flex;
     justify-content: center;
     width: 40px;
@@ -357,18 +395,21 @@ h2,p,a{
     transition: ease-in-out .2s;
     cursor: pointer;
 }
-.arraw__back:hover{
+
+.arraw__back:hover {
     background-color: #181818;
 }
-.arraw__back img{
+
+.arraw__back img {
     width: 26px;
 }
 
-.user__about{
+.user__about {
     padding-left: 20px;
     margin-top: 40px;
 }
-.button__edit__profile{
+
+.button__edit__profile {
     font-weight: 700;
     font-size: 16px;
     border: 1px solid #fff;
@@ -381,59 +422,65 @@ h2,p,a{
     transition: ease-in-out .2s;
     cursor: pointer;
 }
-.user__about button:hover{
+
+.user__about button:hover {
     background-color: #181818;
 }
 
 .user__about h2 {
-  margin-top: 70px;
-  padding-bottom: 10px;
+    margin-top: 70px;
+    padding-bottom: 10px;
 }
+
 .user__content {
-  margin-top: 10px;
+    margin-top: 10px;
 }
+
 .user__stats {
-  display: flex;
-  gap: 20px;
-  margin-top: 20px;
-  color: #646464;
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+    color: #646464;
 }
 
 .stat__value {
-  font-weight: 600;
-  color: white;
+    font-weight: 600;
+    color: white;
 }
 
-.profile__nav{
+.profile__nav {
     display: flex;
     margin: 35px;
     justify-content: space-between;
     font-weight: 600;
     cursor: pointer;
     border-bottom: 1px solid #2F3336;
-    color: #646464; 
+    color: #646464;
     padding: 16px 30px;
 }
-.profile__nav p:hover{
+
+.profile__nav p:hover {
     background-color: #181818;
-    
-}
-.profile__nav .post{
-    border: 2px solid #1D9BF0;
-    border-radius: 50px ;
+
 }
 
-.User__image{
+.profile__nav .post {
+    border: 2px solid #1D9BF0;
+    border-radius: 50px;
+}
+
+.User__image {
     position: relative;
 }
 
-.User__image .picture__couverture{
+.User__image .picture__couverture {
     width: 100%;
     height: 200px;
     object-fit: cover;
     background-color: #333639;
 
 }
+
 .User__image .picture__profile {
     position: absolute;
     width: 150px;
@@ -442,4 +489,45 @@ h2,p,a{
     margin-left: 20px;
     border-radius: 50%;
     border: 5px solid #fff;
-  }
+}
+
+.user-profil {
+    display: flex;
+    position: fixed;
+    bottom: 8px;
+    transition: ease-in-out .2s;
+    
+}
+
+.user-avatar {
+    width: 40px;
+    height: 40px;
+}
+
+.post-button {
+    width: 100%;
+    margin-top: 10px;
+    font-weight: 600;
+}
+
+.user-profil .user-detail {
+    margin: 0 20px 0 4px;
+}
+
+
+.sidebar .user-profil h4 {
+    font-weight: 500;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+}
+
+.sidebar .user-profil img {
+    border-radius: 50%;
+}
+.likes-icon:hover{
+    background-color: #c1035b;
+    border-radius: 50%;
+    padding: 20px;
+    cursor: pointer;
+}
