feat:hover tweet action

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -217,6 +217,17 @@ a {
     font-family: 'Inter', sans-serif;
 }
 
+.sidebar{
+    position: sticky;
+    top: 0;
+    height: 100%;
+}
+.trends{
+    position: sticky;
+        top: 0;
+        height: 100%;
+}
+
 .sidebarOption {
     display: flex;
     align-items: center;
