Conexion front-end and back-end

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -179,11 +179,12 @@ body {
 
 .tweet-image img {
     max-width: 100%;
-    height: auto;
+    height: 400px;
     border-radius: 50px;
     border-color: #2F3336;
     border-style: solid;
     border-width: 1px;
+    width: 100%;
 }
 
 .tweet-actions {
